STAC-18960: Add monitor description to response

--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -70,6 +70,8 @@ components:
           type: string
         name:
           type: string
+        description:
+          type: string
         health:
           $ref: "checks.api.yaml#/components/schemas/HealthStateValue"
         triggeredTimestamp:
