STAC-18960: return endTime and startTime as instant

--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -126,10 +126,12 @@ components:
           $ref: "prometheus.api.yaml#/components/schemas/PromQuery"
         description:
           type: string
-        start:
-          $ref: "prometheus.api.yaml#/components/schemas/PromTime"
-        end:
-          $ref: "prometheus.api.yaml#/components/schemas/PromTime"
+        startTime:
+          type: integer
+          format: instant
+        endTime:
+          type: integer
+          format: instant
         step:
           $ref: "prometheus.api.yaml#/components/schemas/PromStep"
       required:
