STAC-18960: Add a bad request response

--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -17,6 +17,8 @@ paths:
       responses:
         "200":
           $ref: "#/components/responses/monitorCheckStatus"
+        "400":
+          $ref: "#/components/responses/monitorCheckStatusApiError"
         "404":
           $ref: "#/components/responses/monitorCheckStatusNotFoundError"
         "500":
