--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -203,6 +203,9 @@ components:
         - triggeredTimestamp
     MonitorCheckStatusRelatedFailuresComponent:
       properties:
+        id:
+          type: integer
+          format: int64
         name:
           type: string
         type:
@@ -212,6 +215,7 @@ components:
         cluster:
           type: string
       required:
+        - id
         - name
         - type
         - namespace
