STAC-18962: Make the component required on the MonitorCheckStatus response

--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -132,6 +132,7 @@ components:
         - monitorId
         - monitorName
         - topologyTime
+        - component
     MonitorCheckStatusMetric:
       type: object
       properties:
