STAC-18954 Add alias to PromqlMetricQuery

--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -153,6 +153,8 @@ components:
       properties:
         query:
           $ref: "prometheus.api.yaml#/components/schemas/PromQuery"
+        alias:
+          type: string
         description:
           type: string
         startTime:
