STAC-19058: Make highlights mandatory

--- a/spec/kubernetes_logs.api.yaml
+++ b/spec/kubernetes_logs.api.yaml
@@ -222,6 +222,7 @@ components:
       required:
         - timestamp
         - message
+        - highlights
         - podName
         - podUID
         - containerName
