--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -95,9 +95,9 @@ components:
           format: int64
         checkStateId:
           type: string
-        name:
+        message:
           type: string
-        description:
+        reason:
           type: string
         health:
           $ref: "checks.api.yaml#/components/schemas/HealthStateValue"
@@ -115,7 +115,7 @@ components:
           format: int64
         monitorName:
           type: string
-        message:
+        monitorDescription:
           type: string
         troubleshootingSteps:
           type: string
@@ -125,7 +125,7 @@ components:
       required:
         - id
         - checkStateId
-        - name
+        - message
         - health
         - triggeredTimestamp
         - metrics
