STAC-19239: Use componentIdentifierTemplate as property name to make clearer its purpose

--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -165,7 +165,7 @@ components:
           $ref: "prometheus.api.yaml#/components/schemas/PromStep"
         unit:
           type: string
-        identifierFormat:
+        componentIdentifierTemplate:
           type: string
       required:
         - query
