STAC-19921: Add unit to timewindow

--- a/spec/arguments.api.yaml
+++ b/spec/arguments.api.yaml
@@ -152,7 +152,7 @@ components:
         parameter:
           type: integer
           format: int64
-        value:
+        valueMs:
           type: integer
           format: int64
           minimum: 0
