STAC-19921: Fix optional value

--- a/spec/arguments.api.yaml
+++ b/spec/arguments.api.yaml
@@ -135,7 +135,7 @@ components:
       required:
         - _type
         - parameter
-        - value
+        - valueMs
     ArgumentTimeWindowVal:
       type: object
       properties:
