STAC-20002: Add new event category

--- a/spec/events.api.yaml
+++ b/spec/events.api.yaml
@@ -370,6 +370,7 @@ components:
       type: string
       enum:
         - Changes
+        - Deployments
         - Alerts
         - Anomalies
         - Activities
